--- a/style.css
+++ b/style.css
@@ -14,3 +14,34 @@ body {
     padding: 15px;
     border-radius: 8px;
 }
+
+#dropdown-menu {
+  position: absolute;
+  top: 40px;
+  left: 0;
+  background: white;
+  border: 1px solid #ccc;
+  list-style: none;
+  padding: 10px;
+  margin: 0;
+}
+
+#dropdown-menu li {
+  margin: 5px 0;
+}
+
+.menu { position: relative; display: inline-block; }
+
+.dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+}
+
+.menu:hover #dropdown-menu {
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
